--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/DarioJaimes/dogexBack#readme",
   "dependencies": {
+    "aws-sdk": "^2.1327.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
