--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/DarioJaimes/dogexBack#readme",
   "dependencies": {
     "aws-sdk": "^2.1327.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
